--- a/index.html
+++ b/index.html
@@ -37,9 +37,10 @@
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
 				<section>
-					<h2>Home header</h2>
+					<h2>GitHub 101</h2>
 					<br/>
 					<h4><a href="http://twitter.com/leahbannon">@leahbannon</a></h4>
+					<small>Disclaimer: I'm just Leah. This isn't associated with anyone.</small>
 					<small><a href="http://github.com/leahbannon">This presentation on GitHub</a></small>
 					</p>
 				</section>
