--- a/index.html
+++ b/index.html
@@ -46,11 +46,101 @@
 				</section>
 
 				<section>
-					<h2>Next slide</h2>
+					<h2>What is GitHub?</h2>
 					<p>
-					body text
+					GitHub is a very popular sitefor sharing and collaborating onopen source code and content.
+
 					</p>
 				</section>
+				<section>
+					<h2>What is GitHub?</h2>
+					<p>Facebook : Pictures :: GitHub : Code</p>
+					<p>LinkedIn : Resumes :: GitHub : Code</p>
+					<p>Twitter : Short Updates :: GitHub : Code</p>
+				</section>
+				<section>
+					<h2>What is GitHub?</h2>
+					<p>To understand GitHub, it helps to understand git.</p>
+					<p>Git is open source version control software.</p>
+					<p>GitHub is a pretty user interface and social website that uses git.</p>
+				</section>
+				<section>
+					<h2>What is GitHub?</h2>
+					<p>Notice the diff</p>
+				</section>
+				<section>
+					<h2>What is GitHub?</h2>
+					<p>It is social</p>
+				</section>
+				<section>
+					<h2>Jargon!</h2>
+					<p>Profile pages</p>
+				</section>
+				<section>
+					<h2>Jargon!</h2>
+					<p>Profile pages</p>
+				</section>
+
+				<section>
+					<h2>Jargon!</h2>
+					<p>Profile pages</p>
+				</section>
+
+				<section>
+					<h2>Jargon!</h2>
+					<p>Organization pages</p>
+				</section>
+
+				<section>
+					<h2>Jargon!</h2>
+					<p>Repos</p>
+				</section>
+
+				<section>
+					<h2>Jargon!</h2>
+					<p>Repo</p>
+				</section>
+
+				<section>
+					<h2>Jargon!</h2>
+					<p>Repo</p>
+				</section>
+				<section>
+					<h2>Jargon!</h2>
+					<p>Repo</p>
+				</section>
+
+				<section>
+					<h2>Jargon!</h2>
+					<p>Repo</p>
+				</section>
+
+				<section>
+					<h2>Jargon!</h2>
+					<p>Watch a repo</p>
+				</section>
+
+				<section>
+					<h2>Jargon!</h2>
+					<p>Watch a repo</p>
+				</section>
+
+				<section>
+					<h2>Jargon!</h2>
+					<p>Star a repo</p>
+				</section>
+
+				<section>
+					<h2>What is GitHub?</h2>
+					<p>It is social</p>
+				</section>
+
+				<section>
+					<h2>Jargon!</h2>
+					<p>Profile pages</p>
+				</section>
+
+
 
 			</div>
 
