--- a/index.html
+++ b/index.html
@@ -137,8 +137,94 @@
 
 				<section>
 					<h2>Jargon!</h2>
+					<p>Fork a repo</p>
+				</section>
+
+				<section>
+					<h2>Jargon!</h2>
+					<p>A forked repo</p>
+				</section>
+
+				<section>
+					<h2>Jargon!</h2>
+					<p>Pull requests</p>
+				</section>
+
+				<section>
+					<h2>Jargon!</h2>
+					<p>Issue & bug tracking</p>
+				</section>
+
+				<section>
+					<h2>Jargon!</h2>
+					<p>Commits</p>
+				</section>
+
+				<section>
+					<h2>Jargon!</h2>
+					<p>Commits</p>
+				</section>
+
+				<section>
+					<h2>Jargon!</h2>
 					<p>Profile pages</p>
 				</section>
+
+				<section>
+					<h2>Jargon!</h2>
+					<p>Commits</p>
+				</section>
+				<section>
+					<h2>GitHub Pages</h2>
+					<p></p>
+				</section>
+
+				<section>
+					<h2>Mapping with GeoJSON</h2>
+					<p></p>
+				</section>
+
+				<section>
+					<h2>Mapping with GeoJSON</h2>
+					<p></p>
+				</section>
+
+				<section>
+					<h2>Mapping with GeoJSON</h2>
+					<p></p>
+				</section>
+				<section>
+					<h2>Mapping with GeoJSON</h2>
+					<p></p>
+				</section>
+
+				<section>
+					<h2>Mapping with GeoJSON</h2>
+					<p></p>
+				</section>
+
+				<section>
+					<h2>Got it?</h2>
+					<p></p>
+				</section>
+				<section>
+					<h2>Questions?</h2>
+					<p></p>
+				</section>
+				<section>
+					<h2>Want to learn more?</h2>
+					<p>Create an account! <a href="http://github.com">github.com</a><br/>
+					<a href="">All the gov repos</a><br/>
+					<a href="http://twitter.com/newgovrepos">Twitter: @NewGovRepos</a><br/>
+					<a href="">government.github.com</a><br/>
+					<a href="">GitHub's gov liaison Ben Balter</a><br/>
+					<a href="">Ben's blog</a><br/>
+					<a href="">Project Open Data</a><br/>
+					<a href="http://github.com/leahbannon">Me on GitHub: @leahbannon</a>
+					</p>
+				</section>
+
+
 
 
 
