--- a/index.html
+++ b/index.html
@@ -214,13 +214,13 @@
 				<section>
 					<h2>Want to learn more?</h2>
 					<p>Create an account! <a href="http://github.com">github.com</a><br/>
-					<a href="">All the gov repos</a><br/>
+					<a href="http://gsa.github.io/federal-open-source-repos/">All the gov repos</a><br/>
 					<a href="http://twitter.com/newgovrepos">Twitter: @NewGovRepos</a><br/>
-					<a href="">government.github.com</a><br/>
-					<a href="">GitHub's gov liaison Ben Balter</a><br/>
-					<a href="">Ben's blog</a><br/>
-					<a href="">Project Open Data</a><br/>
-					<a href="http://github.com/leahbannon">Me on GitHub: @leahbannon</a>
+					<a href="http://government.github.com">government.github.com</a><br/>
+					<a href="http://github.com/benbalter">GitHub's gov liaison @BenBalter</a><br/>
+					<a href="http://ben.balter.com/">Ben's blog</a><br/>
+					<a href="http://project-open-data.github.io">Project Open Data</a><br/>
+					<a href="http://github.com/leahbannon">Me on GitHub: @LeahBannon</a>
 					</p>
 				</section>
 
